[gd_scene load_steps=2 format=3 uid="uid://c467tawptvo4i"]

[ext_resource type="Script" path="res://addons/pillz_table_editor/scripts/main_panel.gd" id="1_abcde"]

[node name="PillzTableEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_abcde")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LoadFolderButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load Folder"

[node name="ClearTableButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Clear Table"

[node name="ColumnVisibilityButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Show/Hide Columns"

[node name="EnemyTable" type="Tree" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 5
column_titles_visible = true
hide_root = true

[node name="ColumnVisibilityPopup" type="PopupMenu" parent="."]
size = Vector2i(200, 100)
